added arguments to slashcommands